# metis

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: database.py  main.py  models.py  routes.py  schemas.py
backend/tests/: test_api.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/types/: index.ts
